--- a/content/settings.json
+++ b/content/settings.json
@@ -12,7 +12,7 @@
       "github": "https://github.com/aleckondichook",
       "medium": "",
       "linkedin": "https://www.linkedin.com/in/aleckondichook",
-      "mail": "mailto:aleckondichook@gmail.com"
+      "mail": "mailto:akondichook@gmail.com"
     }
   },
   "siteConfiguration": {
